# FinalAssignmentPolimi

./: .gitignore  README.md
Cooling/: CMakeLists.txt  CMakePresets.json  Cooling.inp  README.md  README.txt  cooling.cpp  cooling.cu  cooling_numba.py  cooling_numba_cuda.py  movie.py  submit.sh  submit_cpp.sh  submit_cuda.sh  submit_install_pyenv.sh  submit_numba.sh  submit_numba_cuda.sh  submit_omp.sh  submit_python.sh  submit_validate.sh  validate_cooling_h5.py
Cooling/Cpp/: CMakeLists.txt  cooling.cpp  submit.sh
Cooling/Cuda/: CMakeLists.txt  cooling.cu  submit.sh
Cooling/Numba/: cooling_numba.py  submit.sh
Cooling/NumbaCuda/: cooling_numba_cuda.py  submit.sh
Cooling/input/: Cooling.in
Cooling/scripts/: build.sh  env.leonardo.sh  env.macos.sh  env.sh  validate_all.sh
Cooling/src/cpp/: cooling.cpp  cooling.cu  cooling_omp.cpp
Cooling/src/python/: cooling.py  cooling_numba.py  cooling_numba_cuda.py
Cooling/tools/: validate_cooling_h5.py  visualize_cooling_h5.py
Particles/: CMakeLists.txt  CMakePresets.json  Particles.inp  README.md  movie.py  requirements.txt  submit.sh  submit_cpp.sh  submit_cuda.sh  submit_install_pyenv.sh  submit_numba.sh  submit_numba_cuda.sh  submit_omp.sh  submit_python.sh  submit_validate.sh
Particles/Cpp/: CMakeLists.txt
Particles/Numba/: submit.sh
Particles/input/: Particles.in
Particles/python/: particles_numba.py
Particles/scripts/: build.sh  env.leonardo.sh  env.macos.sh  env.sh  validate_all.sh
Particles/src/: particles.cu
Particles/src/cpp/: particles.cpp  particles.cu  particles_omp.cpp
Particles/src/python/: particles.py  particles_numba.py  particles_numba_cuda.py
Particles/tools/: validate_particles_h5.py  visualize_particles_h5.py
Particles2D/: CMakeLists.txt  Particles.inp  README.md  movie.py  particles_numba.py  particles_numba_cuda.py  validate_particles_h5.py
Particles2D/Cpp/: particles.cpp  submit.sh
Particles2D/Cuda/: CMakeLists.txt  README.md  particles.cu  submit.sh
Particles2D/Numba/: particles_numba.py
Particles2D/NumbaCuda/: particles_numba_cuda.py  submit.sh
